<resources>
    <string name="app_name">Crypto Mon</string>
    <string name="all_about_bitcoin">All About BitCoin</string>
    <string name="bitcoin">BitCoin</string>
    <string name="val">VAL</string>
    <string name="description">Description</string>
    <string name="litecoin">LiteCoin</string>
    <string name="powered_by">Powered By:</string>
    <string name="coindesk"><u>CoinDesk</u></string>
    <string name="top_100_crypto">TOP 100 Crypto</string>
    <string name="txt_test">test</string>
    <string name="x">LOADING</string>
    <string name="price">Price:</string>
    <string name="_1h_1d_7d">(1h|1d|7d) \u0394 %:</string>
    <string name="for_slash"> \u00A0 | \u00A0</string>
    <string name="_24_hour_volume">24h Volume:</string>
    <string name="dash">--</string>
    <string name="link">Link:</string>
    <string name="cryptos_display_link">https://coinmarketcap.com/currencies/</string>
    <string name="subreddit_link_text">https://www.reddit.com/r/</string>
    <string name="currency">Currency:</string>
    <string name="dollars">($) USD / United States Dollar</string>
    <string name="euro">(€) EUR / Euro</string>
    <string name="dollar_symb">$</string>
    <string name="euro_symb">€</string>
    <string name="ok">OK</string>
    <string name="currency_sel">Currencies</string>
    <string name="banner_ad_unit_id">ca-app-pub-6002737231550640/6485035382</string>
    <string name="banner_ad_unit_id2">ca-app-pub-6002737231550640/5401674534</string>
    <string name="subreddit_links">Subreddit Links</string>
    <string name="reddit_links">Reddit Links</string>
    <string name="not_avail">Not Available</string>
    <string name="r_cryptocurrency">r/CryptoCurrency</string>
    <string name="r_bitcoin">r/Bitcoin</string>
    <string name="r_ethereum">r/ethereum</string>
    <string name="r_ripple">r/Ripple</string>
    <string name="r_bitcash">r/Bitcoincash</string>
    <string name="r_litecoin">r/litecoin</string>
    <string name="r_cardano">r/cardano</string>
    <string name="r_stellar">r/Stellar</string>
    <string name="r_neo">r/NEO</string>
    <string name="r_eos">r/eos</string>
    <string name="r_iota">r/Iota</string>
    <string name="r_dashpay">r/dashpay</string>
    <string name="r_nem">r/nem</string>
    <string name="r_monero">r/Monero</string>
    <string name="r_lisk">r/Lisk</string>
    <string name="r_ethereumclassic">r/EthereumClassic</string>
    <string name="r_tronix">r/Tronix</string>
    <string name="r_vechain">r/Vechain</string>
    <string name="r_qtum">r/Qtum</string>
    <string name="back">dismiss</string>
    <string name="r_bitcoingoldhq">r/BitcoinGoldHQ</string>
    <string name="r_steem">r/steem</string>
    <string name="r_tether">r/Tether</string>
    <string name="r_helloicon">r/helloicon</string>
    <string name="r_omisego">r/omise_go</string>
    <string name="r_zcash">r/zcash</string>
    <string name="r_verge">r/verge</string>
    <string name="r_nanocurrency">r/nanocurrency</string>
    <string name="r_binanceexchange">r/BinanceExchange</string>
    <string name="r_populous">r/populous</string>
    <string name="r_bytecoin">r/bytecoin</string>
    <string name="r_rchain">r/RChain</string>
    <string name="r_statusim">r/statusim</string>
    <string name="r_dogecoin">r/dogecoin</string>
    <string name="r_wavesplatform">r/Wavesplatform</string>
    <string name="r_bitshares">r/BitShares</string>
    <string name="r_cryptomarkets">r/CryptoMarkets</string>
    <string name="r_makerdao">r/MakerDAO</string>
    <string name="r_digix">r/digix</string>
    <string name="r_waltonchain">r/Waltonchain</string>
    <string name="r_zerox">r/Zerox</string>
    <string name="r_augur">r/Augur</string>
    <string name="r_aeternity">r/Aeternity</string>
    <string name="r_zclassic">r/ZClassic</string>
    <string name="r_decred">r/decred</string>
    <string name="r_veritaseum">r/Veritaseum</string>
    <string name="r_hshare">r/hshare</string>
    <string name="r_electroneum">r/Electroneum</string>
    <string name="r_komodoplatform">r/komodoplatform</string>
    <string name="r_kucoin">r/kucoin</string>
    <string name="r_cryptocurrencies">r/CryptoCurrencies</string>
    <string name="r_ardor">r/Ardor</string>
    <string name="r_arkecosystem">r/ArkEcosystem</string>
    <string name="r_arkcoin">r/Arkcoin</string>
    <string name="r_neotrader">r/Neotrader</string>
    <string name="r_dragonchain">r/Dragonchain</string>
    <string name="r_digibyte">r/Digibyte</string>
    <string name="r_loopring">r/loopring</string>
    <string name="r_zilliqa">r/zilliqa</string>
    <string name="r_basicattentiontoken">r/BasicAttentionToken</string>
    <string name="r_bitplaceexchange">r/BitplaceExchange</string>
    <string name="r_batproject">r/BATProject</string>
    <string name="r_byteball">r/ByteBall</string>
    <string name="r_aelf">r/aelf</string>
    <string name="r_aelfofficial">r/aelfofficial</string>
    <string name="r_aelfTrader">r/AElfTrader</string>
    <string name="r_polymathnetwork">r/PolymathNetwork</string>
    <string name="r_bytomblockchain">r/BytomBlockchain</string>
    <string name="r_monacoin">r/monacoin</string>
    <string name="r_qash">r/QASH</string>
    <string name="r_bytomchain">r/Bytomchain</string>
    <string name="r_reddcoin">r/ReddCoin</string>
    <string name="r_aionnetwork">r/AionNetwork</string>
    <string name="r_aiontrader">r/AionTrader</string>
    <string name="r_golem">r/Golem</string>
    <string name="r_golemproject">r/GolemProject</string>
    <string name="r_golemtrader">r/GolemTrader</string>
    <string name="name">Name:</string>
    <string name="rank">Rank:</string>
    <string name="expand">Expand  \u00A0 \u00A0 -> </string>
    <string name="coinmarketcap">Coinmarketcap Link</string>
    <string name="name2">NAME</string>
    <string name="symbol">Symbol:</string>
    <string name="price_usd">Price USD:</string>
    <string name="price_eur">Price TBD:</string>
    <string name="price_btc">Price BTC:</string>
    <string name="avail_supply">Avail. Supply:</string>
    <string name="total_supply">Total Supply:</string>
    <string name="max_supply">Max. Supply:</string>
    <string name="spacer">-----------</string>
    <string name="delta_1_hour">Delta 1 Hour:</string>
    <string name="delta_24_hours">Delta 24 Hours:</string>
    <string name="delta_7_days">Delta 7 Days:</string>
    <string name="refresh">Refresh</string>
    <string name="_24h_volume_usd">24h Volume USD:</string>
    <string name="_24h_volume_eur">24h Volume TBD:</string>
    <string name="market_cap_usd">Market Cap USD:</string>
    <string name="market_cap_eur">Market Cap TBD:</string>
    <string name="updated">Updated:</string>
    <string name="jpy">￥</string>
    <string name="jpy_japanese_yen">(¥) JPY / Japanese Yen</string>
    <string name="gbp_pound_sterling">(£) GBP / Pound Sterling</string>
    <string name="jpy_symb">¥</string>
    <string name="gbp_symb">(£) GBP / Pound Sterling</string>
    <string name="price_">Price </string>
    <string name="market_cap_">Market Cap </string>
    <string name="vol24h_">24h Volume </string>
    <string name="colon">:</string>
    <string name="a_aud_australian_dollar">(A$) AUD / Australian Dollar</string>
    <string name="c_cad_canadian_dollar">(C$) CAD / Canadian Dollar</string>
    <string name="fr_chf_swiss_franc">(Fr) CHF / Swiss Franc</string>
    <string name="cny_renminbi">(元) CNY / Renminbi</string>
    <string name="kr_sek_swedish_krona">(kr) SEK / Swedish Krona</string>
    <string name="nz_nzd_new_zealand_dollar">(NZ$) NZD / New Zealand Dollar</string>
    <string name="krw_s_korean_won">(₩) KRW / S. Korean Won</string>
    <string name="try_turkish_lira">(₺) TRY / Turkish Lira</string>
    <string name="rub_russian_ruble">(₽) RUB / Russian Ruble</string>
    <string name="indian_rupee">(₹) INR / Indian Rupee</string>
    <string name="aud_symb">A$</string>
    <string name="cad_symb">C$</string>
    <string name="chf_symb">Fr</string>
    <string name="cny_symb">元</string>
    <string name="sek_symb">kr</string>
    <string name="nzd_symb">NZ$</string>
    <string name="krw_symb">₩</string>
    <string name="try_symb">₺</string>
    <string name="rub_symb">₽</string>
    <string name="inr_symb">₹</string>
    <string name="requested">Requested:</string>
    <string name="navigate_to">Navigate To:</string>
    <string name="https_coinmarketcap_com_currencies">https://coinmarketcap.com/currencies/</string>
    <string name="id"><![CDATA[<id>]]></string>
    <string name="about">About</string>
    <string name="version">Version:</string>
    <string name="about_">About:</string>
    <string name="vers_number">1.3</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="release_date">Release Date:</string>
    <string name="release_date2">March 01, 2018</string>
    <string name="update_date">April 7, 2019</string>
    <string name="crypto_currencies">Crypto Currencies:</string>
    <string name="onehundred">100</string>
    <string name="monetary_currencies">Monetary Currencies:</string>
    <string name="four_teen">14</string>
    <string name="api">API:</string>
    <string name="developer">Developer:</string>
    <string name="msimunac">Marko Simunac</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="api_coinmarketcap_com">api.coinmarketcap.com</string>
    <string name="disclaimer_">Disclaimer:</string>
    <string name="no_advice">No Investment Advice:\nThe information provided on this application
        does not constitute investment advice, financial advice, trading advice, or any other sort
        of advice and you should not treat any of the  content as such. Neither PoloApps nor
        CoinMarketCap recommend that any cryptocurrency should be bought, sold, or held by you.
        Do conduct your own due diligence and consult your financial Adviser before making any
        investment decisions.</string>
    <string name="data_obtained">Accuracy of Data Provided:\nAll data provided within this
        application was obtained via public APIs provided by Coinmarketcap.com. According to
        disclaimers on Coinmarketcap.com, the information is provided as is, and you understand that
        you are using any and all information available here at your own risk. Neither PoloApps, nor
        CoinMarketCap hold any responsibility for any missing or wrong information.</string>
    <string name="https_coinmarketcap_com">https://coinmarketcap.com/</string>
    <string name="alerts"><![CDATA[Alerts \u00A0 \u00A0 \u00A0 —>]]></string>
    <string name="off">off</string>
    <string name="last_update">Last Update:</string>
    <string name="alerts_">Alerts</string>
    <string name="set">SET</string>
    <string name="off_">OFF</string>
    <string name="dollar_sign">$</string>
    <string name="clear">clear</string>
    <string name="_24h_vol">24h Vol:</string>
    <string name="set_alert">SET ALERTS</string>
    <string name="dismiss">Dismiss:</string>
    <string name="delete">Delete</string>
    <string name="current">Current:</string>
    <string name="threshold">Threshold:</string>
    <string name="type">Alert</string>
    <string name="xx">XX</string>
    <string name="xdel">x</string>
    <string name="no_achieved_alerts">No Achieved Alerts</string>
    <string name="no_alerts_set">No Alerts Set</string>
    <string name="running">Alerts Running</string>
    <string name="running1">Alert Running</string>
    <string name="notice">NOTICE</string>
    <string name="delete_switch_notice">Switching the selected monetary currency will result in
                                        deletion of all set automatic alerts! You may reset the
                                        automatic again using the selected monetary currency.
                                                                                           </string>
</resources>