<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@android:color/black">

    <Button
        android:id="@+id/del_set_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:text="@string/delete" />

    <TextView
        android:id="@+id/set_alert_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/name2"
        android:textColor="@color/fade5"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/set_current_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/set_alert_name"
        android:text="@string/current"
        android:textColor="@color/l3col"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/static2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/set_current_text"
        android:text="@string/threshold"
        android:textColor="@color/l3col"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/set_alert_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_alert_name"
        android:layout_centerHorizontal="true"
        android:text="@string/type"
        android:textColor="@color/l3col"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/set_currency_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_current_text"
        android:layout_centerHorizontal="true"
        android:text="@string/dollar_symb"
        android:textColor="@color/l3col"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/set_current_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/set_current_text"
        android:text="@string/xx"
        android:textColor="@color/l3col"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/set_threshold_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/set_current_text"
        android:text="@string/xx"
        android:textColor="@color/l3col"
        android:textSize="15sp" />

</RelativeLayout>