<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:text="@string/disclaimer_"
        android:textColor="@color/red"
        android:textSize="19sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_advice"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_obtained"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/disc_coinmarketcap_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/https_coinmarketcap_com"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="15sp" />

    <Button
        android:id="@+id/disc_NO_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />


</LinearLayout>